// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login.Field /> should render correctly 1`] = `
<div
  className="uk-form-row"
>
  <div
    className="uk-form-icon uk-width-1-1"
  >
    <i
      className="uk-icon-email"
    />
    <input
      autoComplete="email"
      className="uk-width-1-1 uk-form-large"
      disabled={false}
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
  <Collapse
    className="uk-form-help-block uk-text-left"
    isOpened={false}
  >
    &nbsp;
  </Collapse>
</div>
`;

exports[`<Login.Field /> should render correctly 2`] = `
<div
  className="uk-form-row"
>
  <div
    className="uk-form-icon uk-width-1-1"
  >
    <i
      className="uk-icon-email"
    />
    <input
      autoComplete="email"
      className="uk-width-1-1 uk-form-large"
      disabled={false}
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      type="email"
      value=""
    />
  </div>
  <Collapse
    className="uk-form-help-block uk-text-left"
    isOpened={false}
  >
    &nbsp;
  </Collapse>
</div>
`;

exports[`<Login.Field /> should render correctly 3`] = `
<div
  className="uk-form-row"
>
  <div
    className="uk-form-icon uk-width-1-1"
  >
    <i
      className="uk-icon-email"
    />
    <input
      autoComplete="email"
      className="uk-width-1-1 uk-form-large uk-form-danger"
      disabled={false}
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
  <Collapse
    className="uk-form-help-block uk-text-left"
    isOpened={true}
  >
    Required
  </Collapse>
</div>
`;

exports[`<Login.Field /> should render correctly 4`] = `
<div
  className="uk-form-row"
>
  <div
    className="uk-form-icon uk-width-1-1"
  >
    <i
      className="uk-icon-email"
    />
    <input
      autoComplete="email"
      className="uk-width-1-1 uk-form-large"
      disabled={true}
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      value="tony@stark.enterprise"
    />
  </div>
  <Collapse
    className="uk-form-help-block uk-text-left"
    isOpened={false}
  >
    &nbsp;
  </Collapse>
</div>
`;

exports[`<Login.Field /> should render correctly 5`] = `
<div
  className="uk-form-row"
>
  <div
    className="uk-form-icon uk-width-1-1"
  >
    <i
      className="uk-icon-spinner uk-icon-spin"
    />
    <input
      autoComplete="email"
      className="uk-width-1-1 uk-form-large"
      disabled={false}
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
  <Collapse
    className="uk-form-help-block uk-text-left"
    isOpened={false}
  >
    &nbsp;
  </Collapse>
</div>
`;

exports[`<Login.Field /> should render correctly 6`] = `
<div
  className="uk-form-row"
>
  <div
    className="uk-form-icon uk-width-1-1"
  >
    <i
      className="uk-icon-lock"
    />
    <input
      autoComplete="password"
      className="uk-width-1-1 uk-form-large"
      disabled={false}
      name="password"
      onBlur={[Function]}
      onChange={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      required={true}
      type="password"
      value=""
    />
  </div>
  <Collapse
    className="uk-form-help-block uk-text-left"
    isOpened={false}
  >
    &nbsp;
  </Collapse>
</div>
`;

exports[`<Login.Field /> should render correctly 7`] = `
<div
  className="uk-form-row"
>
  <div
    className="uk-form-icon uk-width-1-1"
  >
    <i
      className="uk-icon-username"
    />
    <input
      autoComplete="name"
      className="uk-width-1-1 uk-form-large"
      disabled={false}
      name="username"
      onBlur={[Function]}
      onChange={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      type="text"
      value=""
    />
  </div>
  <Collapse
    className="uk-form-help-block uk-text-left"
    isOpened={false}
  >
    &nbsp;
  </Collapse>
</div>
`;
